2015-01-13  Anders Carlsson  <andersca@apple.com>

        Fill in more of WebProcessLifetimeTracker
        https://bugs.webkit.org/show_bug.cgi?id=140418

        Reviewed by Andreas Kling.

        * UIProcess/WebProcessLifetimeObserver.cpp:
        (WebKit::WebProcessLifetimeObserver::WebProcessLifetimeObserver):
        (WebKit::WebProcessLifetimeObserver::~WebProcessLifetimeObserver):
        (WebKit::WebProcessLifetimeObserver::addWebPage):
        (WebKit::WebProcessLifetimeObserver::removeWebPage):
        * UIProcess/WebProcessLifetimeObserver.h:
        * UIProcess/WebProcessLifetimeTracker.cpp:
        (WebKit::WebProcessLifetimeTracker::WebProcessLifetimeTracker):
        (WebKit::WebProcessLifetimeTracker::addObserver):
        (WebKit::WebProcessLifetimeTracker::connectionWillOpen):
        (WebKit::WebProcessLifetimeTracker::connectionWillClose):
        (WebKit::WebProcessLifetimeTracker::pageWasInvalidated):
        (WebKit::WebProcessLifetimeTracker::processIsRunning):
        * UIProcess/WebProcessLifetimeTracker.h:

2015-01-13  Chris Dumez  <cdumez@apple.com>

        Unreviewed iOS build fix after r178375.

        LoaderClient::didLayout() now takes a reference to the WebPageProxy
        instead of a pointer.

        * UIProcess/ios/WebPageProxyIOS.mm:
        (WebKit::WebPageProxy::didCommitLayerTree):

2015-01-13  Sam Weinig  <sam@webkit.org>

        Convert WebUserContentControllerProxy to an API::Object bridged to WKUserContentController
        https://bugs.webkit.org/show_bug.cgi?id=140414

        Reviewed by Dan Bernstein.

        * Shared/API/APIObject.h:
        Add Type::UserContentController.

        * Shared/Cocoa/APIObject.mm:
        (API::Object::newObject):
        Allocate WebUserContentControllerProxy using [WKUserContentController alloc].

        * UIProcess/API/Cocoa/WKUserContentController.mm:
        (-[WKUserContentController init]):
        (-[WKUserContentController dealloc]):